GBS-9: Authentication API.
